--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -7,78 +7,78 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
+// p, ol, ul, td {
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+// }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px;
+// }
 
-a {
-  color: #000;
+// a {
+//   color: #000;
+  
+//   &:visited {
+//     color: #666;
+//   }
+  
+//   &:hover {
+//     color: #fff;
+//     background-color: #000;
+//   }
+// }
 
-  &:visited {
-    color: #666;
-  }
+// th {
+//   padding-bottom: 5px;
+// }
 
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
+// td {
+//   padding: 0 5px 7px;
+// }
 
-th {
-  padding-bottom: 5px;
-}
+// div {
+//   &.field, &.actions {
+//     margin-bottom: 10px;
+//   }
+// }
 
-td {
-  padding: 0 5px 7px;
-}
+// #notice {
+//   color: green;
+// }
 
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
-}
+// .field_with_errors {
+//   padding: 2px;
+//   background-color: red;
+//   display: table;
+// }
 
-#notice {
-  color: green;
-}
+// #error_explanation {
+//   width: 450px;
+//   border: 2px solid red;
+//   padding: 7px 7px 0;
+//   margin-bottom: 20px;
+//   background-color: #f0f0f0;
+  
+//   h2 {
+//     text-align: left;
+//     font-weight: bold;
+//     padding: 5px 5px 5px 15px;
+//     font-size: 12px;
+//     margin: -7px -7px 0;
+//     background-color: #c00;
+//     color: #fff;
+//   }
+  
+//   ul li {
+//     font-size: 12px;
+//     list-style: square;
+//   }
+// }
 
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px 7px 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px -7px 0;
-    background-color: #c00;
-    color: #fff;
-  }
-
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
-}
-
-label {
-  display: block;
-}
+// label {
+//   display: block;
+// }
